# Vishwakarma_awards

./: MOVEMENT_FIX_GUIDE.md  QUICK_START_FIXED.md  SETUP_AND_FIXES.md  akabot.urdf  frames_2025-12-06_21.11.18.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/akabot_control/share/akabot_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/akabot_control/share/akabot_control/config/: controller_params.yaml
install/akabot_control/share/akabot_control/launch/: final_arm.launch.py  gazebo_control.launch.py  scanning_vision_pick_place.launch.py  test_camera.launch.py  vision_pick_place.launch.py
log/: latest_build  latest_list
modelfiles/: arm_brain.modelfile
src/akabot_bringup/config/: ros2_controllers.yaml
src/akabot_control/: package.xml  setup.cfg  setup.py
src/akabot_control/akabot_control/: advanced_ball_picker.py  akabot_controller.py  dual_camera_picker.py  interactive_control.py  simple_ball_detector.py
src/akabot_control/config/: controller_params.yaml
src/akabot_control/launch/: control.launch.py  demo.launch.py  dual_camera.launch.py  enhanced_vision_pick_place.launch.py  final_arm.launch.py  scanning_vision_pick_place.launch.py  system.launch.py  vision_pick_place.launch.py
src/akabot_control/scripts/: test_poses.py
src/akabot_description/urdf/: akabot.ros2_control.xacro  akabot.urdf.xacro  akabot_core.xacro  akabot_gz.urdf.xacro  akabot_tf_camera.xacro  (+1 more)
src/arm_vla_pkg/: SCANNING_VISION_PICK_PLACE_README.md  setup.py
src/cobot_description/: CMakeLists.txt
(+68 files in other folders)
